--- a/src/pages/HomeTasks/styles.css
+++ b/src/pages/HomeTasks/styles.css
@@ -47,6 +47,53 @@
     position: absolute;
     width: 100%;
   }
+
+  .modalContent {
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+    background-color: #222222;
+    font-size: 2rem;
+    overflow: hidden;
+    position: fixed;
+    color: #ffffffaa;
+    width: 700px;
+    height: 400px;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+  }
+
+  @media only screen and (max-width: 860px) {
+    .modal{
+        width: 90%;
+    }
+  }
+  .modal{
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+  }
+  /* .modal:before {
+    background-color: rgba(0, 0, 0, 0.242);
+    backdrop-filter: blur(10px) saturate(100%) contrast(100%) brightness(100%);
+    -webkit-backdrop-filter: blur(10px) saturate(100%) contrast(100%)
+      brightness(100%);
+    content: "";
+    height: 100%;
+    position: absolute;
+    width: 100%;
+  } */
+
   
   /* OLD TEST */
   #container {
@@ -75,14 +122,14 @@
     box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.4);
     filter: blur(15px);
   }
-  .form img {
+  .internalBox img {
     width: 120px;
     height: 120px;
     border-radius: 100%;
   }
-  .form {
+  .internalBox {
     text-align: center;
-    position: absolute;
+    position: relative;
     left: 50%;
     top: 54%;
     border-radius: 15px;
@@ -93,41 +140,65 @@
   }
   .inputTaskTitle {
     background: 0;
-    width: 90%;
+    width: 44%;
     outline: 0;
     border: 0;
     border-bottom: 2px solid rgba(255, 255, 255, 0.3);
-    margin: 20px 0;
-    padding-bottom: 10px;
+    margin: 20px 10px;
+    /* padding-bottom: 10px; */
+    padding: 8px;
     font-size: 18px;
     font-weight: bold;
     color: rgba(255, 255, 255, 0.8);
-    transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.1s cubic-bezier(0.165, 0.84, 0.44, 1);
   }
   .inputTaskTitle:focus {
-    border-bottom: 4px solid rgba(255, 255, 255, 0.3);
-    border-left: 4px solid rgba(255, 255, 255, 0.3);
-    border-top: 4px solid rgba(255, 255, 255, 0.3);
-    border-right: 4px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 0px solid rgba(255, 255, 255, 0.3);
+    border-left: 0px solid rgba(255, 255, 255, 0.3);
+    border-top: 0px solid rgba(255, 255, 255, 0.3);
+    border-right: 0px solid rgba(255, 255, 255, 0.3);
     border-radius: 10px;
-    padding: 15px;
+    padding: 8px;
+  }
+  .saveButton{
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .cancelButton{
+    width: 100%;
+  }
+  .listPanel{
+    transform: translate(0%, 80px);
+    margin: 10px;
+    border-radius: 10px;
+  }
+  .titleTaskCard{
+    font-size: 16pt;
+  }
+  .cardTask{
+    background-color: #00000088;
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 10px;
+    text-align: start;
+    font-size: 12pt;
+  }
+  .cardTask:hover{
+    background-color: #000000ce;
+    cursor: pointer;
   }
   
   .inputTaskTitle::placeholder {
     color: rgba(255, 255, 255, 0.283);
   }
-  .input[type="submit"] {
-    border: 0;
-    border-radius: 8px;
-    padding-bottom: 0;
-    height: 60px;
-    background: #df2359;
-    color: white;
+
+  .newTaskBT{
+    position: absolute;
+    width: 97%;
+    left: 50%;
+    top: 6%;
+    transform: translate(-50%, -50%);
     cursor: pointer;
-    transition: all 600ms ease-in-out;
-  }
-  .input[type="submit"]:hover {
-    background: #c0392b;
   }
 
   .title{
@@ -150,15 +221,15 @@
     font-size: 14pt;
     border-width: 0;
     transition: all 0.2s linear;
+    cursor: pointer;
   }
   
   button:hover {
-    width: 200px;
-    height: 50px;
     background-color: #ffffff45;
     border-radius: 10px;
     color: #ffffff;
     font-size: 14pt;
     border-width: 0;
+    cursor: pointer;
   }
   
